<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ifsc.layouts.ActivityLinearLayout">

    <TextView
        android:id="@+id/tituloView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/radioGroupCourses">

        <RadioButton
            android:id="@+id/rbCursoTecnico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tecnico" />

        <RadioButton
            android:id="@+id/rbGraduacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/graduacao" />

        <RadioButton
            android:id="@+id/rbPos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pos" />
    </RadioGroup>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send" />
</LinearLayout>
