<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ifsc.layouts.ActivityFormularioConstraint">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/endereco"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_compass"
                android:ems="10"
                android:hint="@string/cidade"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_dialog_email"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_call"
                android:ems="10"
                android:hint="@string/telefone"
                android:inputType="text" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/estadoSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <EditText
                    android:id="@+id/editTextCEP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/cep"
                    android:inputType="text" />

            </LinearLayout>

            <EditText
                android:id="@+id/editTextAniversario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_my_calendar"
                android:ems="10"
                android:hint="@string/aniversario"
                android:inputType="text" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>